# auto-rag-eval

./: .gitignore  TODO.md  pyproject.toml  requirements.txt
auto-rag-eval/Data/StackExchange/: preprocessor.py
auto-rag-eval/ExamGenerator/: question_generator.py
