[tool.poetry]
name = "llm_automated_exam_evaluation"
version = "0.1.0"
description = "A fork of an AWS project for automatically generating exams to evaluate RAG pipelines"
authors = ["Your Name <gabe@sonosim.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
boto3 = "*"
datasets = "*"
nltk = "*"
tqdm = "*"
markdownify = "*"
pydantic = "*"
torch = "*"
sentence-transformers = "*"
tenacity = "*"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
isort = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
known_first_party = ["llm_automated_exam_evaluation"]
profile = "black"
line_length = 100

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
